<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_272E41"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        style="@style/dialog_title_text_style"
        android:text="@string/dialog_account_login_title" />

    <EditText
        android:id="@+id/et_password"
        style="@style/edit_style"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        tools:ignore="Autofill,LabelFor"
        tools:text="10000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_account_confirm"
            style="@style/dialog_button_style"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dialog_confirm"
            tools:text="确定" />

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/dialog_button_style"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dialog_cancel"
            tools:text="取消" />
    </LinearLayout>
</LinearLayout>
